# nd013-c5-planning-starter

./: .gitignore  README.md
project/: README.md  how_to_run.md  how_to_run.txt  install-ubuntu.sh  instructions.md  mpc_controller.cpp  run_carla.sh  run_main.sh  run_main_pid.sh  simulatorAPI.py  starter.sh  test_mpc.sh
project/pid_controller/: README.md  main.cpp  main_mpc.cpp  pid_controller  pid_controller.cpp  pid_controller.h  spiral_planner
project/solution_MJT/: CMakeLists.txt  Makefile  behavior_planner_FSM.cpp  cost_functions.cpp  cost_functions.h  main.cpp  min_jerk_trajectory_optimizer.cpp  min_jerk_trajectory_optimizer.h  motion_planner.cpp  motion_planner.h  planning_params.h  plot_utils.cpp  plot_utils.h  structs.h  utils.cpp  utils.h
project/solution_cubic_spirals/: .gitignore  MPC.cpp  MPC.h  behavior_planner_FSM.cpp  cost_functions.cpp  main.cpp  motion_planner.cpp  velocity_profile_generator.cpp
project/solution_cubic_spirals_STARTER/: .gitignore  CMakeCache.txt  Makefile  behavior_planner_FSM.cpp  cost_functions.cpp  main.cpp  motion_planner.cpp  velocity_profile_generator.cpp
project/starter_files/: CMakeLists.txt  behavior_planner_FSM.cpp  cost_functions.cpp  main.cpp  motion_planner.cpp  planning_params.h  velocity_profile_generator.cpp
solution_cubic_spirals_STARTER/: behavior_planner_FSM.h  motion_planner.h
starter/: Makefile  ToolChain.cmake  behavior_planner_FSM.cpp  cost_functions.cpp  cost_functions.h  main.cpp  motion_planner.cpp  planning_params.h  structs.h  velocity_profile_generator.cpp
(+14 files in other folders)
